fix(alert): aligned close button according to design (#DS-2886)

--- a/apps/docs/src/styles/koobiq/default-theme/css-tokens.css
+++ b/apps/docs/src/styles/koobiq/default-theme/css-tokens.css
@@ -1403,8 +1403,8 @@
   --kbq-alert-size-normal-icon-margin-left: 12px;
   --kbq-alert-size-normal-icon-padding-top: 4px;
   --kbq-alert-size-normal-title-margin-bottom: 4px;
-  --kbq-alert-size-normal-close-button-margin-top: 14px;
-  --kbq-alert-size-normal-close-button-margin-left: 6px;
+  --kbq-alert-size-normal-close-button-margin-top: 10px;
+  --kbq-alert-size-normal-close-button-margin-left: 2px;
   --kbq-alert-size-normal-button-stack-padding-top: 8px;
   --kbq-alert-size-normal-button-stack-padding-bottom: 2px;
   --kbq-alert-size-normal-no-title-icon-margin-top: 16px;
@@ -1422,7 +1422,7 @@
   --kbq-alert-size-compact-icon-margin-right: 8px;
   --kbq-alert-size-compact-icon-padding-top: 4px;
   --kbq-alert-size-compact-title-margin-bottom: 2px;
-  --kbq-alert-size-compact-close-button-margin-top: 8px;
+  --kbq-alert-size-compact-close-button-margin-top: 10px;
   --kbq-alert-size-compact-close-button-margin-left: 2px;
   --kbq-alert-size-compact-button-stack-padding-top: 8px;
   --kbq-alert-size-compact-button-stack-padding-bottom: 2px;
