--- a/packages/components/alert/alert-tokens.scss
+++ b/packages/components/alert/alert-tokens.scss
@@ -16,8 +16,8 @@
     --kbq-alert-size-normal-icon-margin-left: var(--kbq-size-m);
     --kbq-alert-size-normal-icon-padding-top: var(--kbq-size-xxs);
     --kbq-alert-size-normal-title-margin-bottom: var(--kbq-size-xxs);
-    --kbq-alert-size-normal-close-button-margin-top: 14px;
-    --kbq-alert-size-normal-close-button-margin-left: 6px;
+    --kbq-alert-size-normal-close-button-margin-top: 10px;
+    --kbq-alert-size-normal-close-button-margin-left: var(--kbq-size-3xs);
     --kbq-alert-size-normal-button-stack-padding-top: var(--kbq-size-s);
     --kbq-alert-size-normal-button-stack-padding-bottom: var(--kbq-size-3xs);
     --kbq-alert-size-normal-no-title-icon-margin-top: var(--kbq-size-l);
@@ -35,7 +35,7 @@
     --kbq-alert-size-compact-icon-margin-right: var(--kbq-size-s);
     --kbq-alert-size-compact-icon-padding-top: var(--kbq-size-xxs);
     --kbq-alert-size-compact-title-margin-bottom: var(--kbq-size-3xs);
-    --kbq-alert-size-compact-close-button-margin-top: var(--kbq-size-s);
+    --kbq-alert-size-compact-close-button-margin-top: 10px;
     --kbq-alert-size-compact-close-button-margin-left: var(--kbq-size-3xs);
     --kbq-alert-size-compact-button-stack-padding-top: var(--kbq-size-s);
     --kbq-alert-size-compact-button-stack-padding-bottom: var(--kbq-size-3xs);
